--- a/.env_template
+++ b/.env_template
@@ -1,36 +1,98 @@
-# InfluxDB
-# The following environment variables are used to configure the InfluxDB container and become local credentials for the InfluxDB instance.
+# -------- InfluxDB --------
 DOCKER_INFLUXDB_INIT_MODE="setup"
-DOCKER_INFLUXDB_INIT_ADMIN_TOKEN="lsc8ecdb0f2b4ceea3b375c96bb7777e" # Random admin token 
-DOCKER_INFLUXDB_INIT_USERNAME="farm_admin" # Replace with a username of choice
-DOCKER_INFLUXDB_INIT_PASSWORD="yourpassword" # Replace with a password of choice 
-DOCKER_INFLUXDB_INIT_BUCKET="FarmData" # Bucket name can be defined here
+DOCKER_INFLUXDB_INIT_ADMIN_TOKEN="lsc8ecdb0f2b4ceea3b375c96bb7777e"
+DOCKER_INFLUXDB_INIT_USERNAME="farm_admin"
+DOCKER_INFLUXDB_INIT_PASSWORD="yourpassword"
+DOCKER_INFLUXDB_INIT_BUCKET="FarmData"
 DOCKER_INFLUXDB_INIT_ORG="kybfarm"
 
-# InfluxDB Home Assistant integration
-HOST_IP=127.0.0.1 # Replace with the IP address of the host machine running InfluxDB
-# InfluxDB all-access API token for integration with Home Assistant: https://docs.influxdata.com/influxdb/cloud/admin/tokens/create-token/#create-an-all-access-token
-INFLUXDB_TOKEN=replace_this_with_all_access_api_token_generated_in_influxdb # Replace with the all-access API token generated in InfluxDB
+INFLUXDB_TOKEN="your-api-token"
 INFLUXDB_PORT=8086
 INFLUXDB_ORG=kybfarm
 INFLUXDB_BUCKET=FarmData
 INFLUXDB_DOMAIN_1=sensor
 INFLUXDB_DOMAIN_2=binary_sensor
-# Dashboard integration Home Assistant
-INFLUXDB_URL="http://127.0.0.1:8086" # Replace with the IP address of the host machine running InfluxDB
 
-# AppDaemon
-HA_URL="http://127.0.0.1:8123" # Replace with the IP address of the host machine running Home Assistant
-# Long-lived access token for AppDaemon integration with Home Assistant: https://developers.home-assistant.io/docs/auth_api/#long-lived-access-token
-TOKEN="replace_this_with_long_lived_access_token_created_in_home_assistant" # Replace with the long-lived access token created in Home Assistant
-# Dashboard integration Home Assistant
-APPDAEMON_URL="http://127.0.0.1:5050" # Replace with the IP address of the host machine running AppDaemon
+# -------- Home Assistant --------
+TOKEN="your-long-lived-token"
 
-## MQTT ##
-# Mosquitto MQTT broker IP and port
-MOSQUITTO_BROKER_IP=127.0.0.1 # Replace with the IP address of the host machine running the Mosquitto MQTT broker
+# -------- AppDaemon --------
+#
+
+# -------- MQTT --------
+MOSQUITTO_BROKER_IP=172.26.31.3
 MOSQUITTO_BROKER_PORT=1883
-# MQTT configuration edge device
+ALLOW_ANONYMOUS=true
+PASSWORD_FILE=  # leave empty if unused
 MQTT_EDGE_KEEP_ALIVE=60
 
+# -------- General --------
+HOST_IP=172.26.31.3
 
+# ───────────── Sensor Data Requests ─────────────
+MQTT_SENSOR_01_DT_REQ=dt/gf/slight01/req
+MQTT_SENSOR_02_DT_REQ=dt/gf/spar02/req
+MQTT_SENSOR_03_DT_REQ=dt/gf/sec01/1/req
+MQTT_SENSOR_04_DT_REQ=dt/gf/sec01/2/req
+MQTT_SENSOR_05_DT_REQ=dt/gf/sph01/1/req
+MQTT_SENSOR_06_DT_REQ=dt/gf/sph01/2/req
+MQTT_SENSOR_10_DT_REQ=dt/gf/sym01/req
+MQTT_SENSOR_11_DT_REQ=dt/gf/co2voc/1/req
+MQTT_SENSOR_12_DT_REQ=dt/gf/co2voc/2/req
+MQTT_SENSOR_13_DT_REQ=dt/gf/sth01/1/req
+MQTT_SENSOR_14_DT_REQ=dt/gf/sth01/2/req
+
+# ───────────── Sensor Commands ─────────────
+MQTT_SENSOR_03_CMD_REQ=cmd/sensor03/req
+MQTT_SENSOR_04_CMD_REQ=cmd/sensor04/req
+MQTT_SENSOR_05_CMD_REQ=cmd/sensor05/req
+MQTT_SENSOR_06_CMD_REQ=cmd/sensor06/req
+
+# ───────────── Relays ─────────────
+MQTT_RELAY_01_CMD_REQ=cmd/relay01/req
+MQTT_RELAY_02_CMD_REQ=cmd/relay02/req
+MQTT_RELAY_03_CMD_REQ=cmd/relay03/req
+MQTT_RELAY_04_CMD_REQ=cmd/relay04/req
+MQTT_RELAY_05_CMD_REQ=cmd/relay05/req
+MQTT_RELAY_06_CMD_REQ=cmd/relay06/req
+MQTT_RELAY_07_CMD_REQ=cmd/relay07/req
+MQTT_RELAY_08_CMD_REQ=cmd/relay08/req
+MQTT_RELAY_09_CMD_REQ=cmd/relay09/req
+MQTT_RELAY_10_CMD_REQ=cmd/relay10/req
+MQTT_RELAY_11_CMD_REQ=cmd/relay11/req
+MQTT_RELAY_12_CMD_REQ=cmd/relay12/req
+MQTT_RELAY_13_CMD_REQ=cmd/relay13/req
+MQTT_RELAY_14_CMD_REQ=cmd/relay14/req
+MQTT_RELAY_15_CMD_REQ=cmd/relay15/req
+MQTT_RELAY_16_CMD_REQ=cmd/relay16/req
+
+# ───────────── SSR ─────────────
+MQTT_SOLID_STATE_RELAY_01_CMD_REQ=cmd/solid_state_relay01/req
+
+# ───────────── Voltage Control ─────────────
+MQTT_FAN_VOLTAGE_CMD_REQ=cmd/fan_voltage/req
+MQTT_FAN_VOLTAGE_CMD_RES=cmd/fan_voltage/res
+MQTT_VALVE_VOLTAGE_CMD_REQ=cmd/valve_voltage/req
+MQTT_VALVE_VOLTAGE_CMD_RES=cmd/valve_voltage/res
+
+# ───────────── Lamps ─────────────
+LAMP_01_IP=192.168.1.101
+MQTT_LAMP_01_CMD_REQ=cmd/lamp01/req
+MQTT_LAMP_01_DT_REQ=dt/lamp01/req
+
+LAMP_02_IP=192.168.1.102
+MQTT_LAMP_02_CMD_REQ=cmd/lamp02/req
+MQTT_LAMP_02_DT_REQ=dt/lamp02/req
+
+# ───────────── PID Controllers ─────────────
+MQTT_COOLING_PID_ENABLE_CMD_REQ=cmd/cooling_pid/req
+MQTT_HEATING_PID_ENABLE_CMD_REQ=cmd/heating_pid/req
+MQTT_CO2_PID_ENABLE_CMD_REQ=cmd/co2_pid/req
+
+# ───────────── Desired Values ─────────────
+MQTT_REF_HUMID_CMD_REQ=cmd/refhumid/req
+MQTT_REF_HUMID_CMD_RES=cmd/refhumid/res
+MQTT_REF_TEMP_CMD_REQ=cmd/reftemp/req
+MQTT_REF_TEMP_CMD_RES=cmd/reftemp/res
+MQTT_REF_CO2_CMD_REQ=cmd/refco2/req
+MQTT_REF_CO2_CMD_RES=cmd/refco2/res
