--- a/server/homeassistant/config/configuration.yaml
+++ b/server/homeassistant/config/configuration.yaml
@@ -7,7 +7,7 @@ frontend:
 
 # External service configuration
 mqtt:
-  sensor: !include include/sensors.yaml
+  sensor: !include include/mqtt_sensor_topics.yaml
 
 automation: !include_dir_merge_list include/Automations
 
