Refactor edge computer main

--- a/.env_template
+++ b/.env_template
@@ -36,11 +36,16 @@ MQTT_EDGE_KEEP_ALIVE=60
 
 ## Sensors ##
 
+# Default serial port for sensors
+RS485_PORT="/dev/ttySC1"
+
+
 # S-LIGHT-01 sensor #
 MQTT_SENSOR_01_DT_REQ="dt/gf/slight01/req"
 MQTT_SENSOR_01_DT_RES="dt/gf/slight01/res"
 SENSOR_01_DT_REQ_AUTOMATION_ALIAS="S-LIGHT-01 Request"
 SENSOR_01_DT_REQ_INTERVAL_SEC=29
+SENSOR_SLIGHT01_ADDR=1
 # S-LIGHT-01: Light 01
 LIGHT_01_NAME="S-LIGHT-01 Light"
 LIGHT_01_HA_ID="S-LIGHT-01_LIGHT"
@@ -53,6 +58,7 @@ MQTT_SENSOR_02_DT_REQ="dt/gf/spar02/req"
 MQTT_SENSOR_02_DT_RES="dt/gf/spar02/res"
 SENSOR_02_DT_REQ_AUTOMATION_ALIAS="S-PAR-02 Request"
 SENSOR_02_DT_REQ_INTERVAL_SEC=29
+SENSOR_SPAR02_ADDR=34
 # S-PAR-02: PAR 02
 PAR_02_NAME="S-PAR-02 PAR"
 PAR_02_HA_ID="S-PAR-02_PAR"
@@ -66,6 +72,7 @@ MQTT_SENSOR_03_DT_RES="dt/gf/sec01/1/res"
 MQTT_SENSOR_03_CMD_REQ="cmd/sec01/1/req"
 SENSOR_03_DT_REQ_AUTOMATION_ALIAS="S-EC-01-1 Request"
 SENSOR_03_DT_REQ_INTERVAL_SEC=59
+SENSOR_SEC01_1_ADDR=3
 # S-EC-01-1: EC 03
 EC_03_NAME="S-EC-01-1 EC"
 EC_03_HA_ID="S-EC-01-1_EC"
@@ -103,6 +110,7 @@ MQTT_SENSOR_04_DT_RES="dt/gf/sec01/2/res"
 MQTT_SENSOR_04_CMD_REQ="cmd/sec01/2/req"
 SENSOR_04_DT_REQ_AUTOMATION_ALIAS="S-EC-01-2 Request"
 SENSOR_04_DT_REQ_INTERVAL_SEC=59
+SENSOR_SEC01_2_ADDR=4
 # S-EC-01-2: EC 04
 EC_04_NAME="S-EC-01-2 EC"
 EC_04_HA_ID="S-EC-01-2_EC"
@@ -139,6 +147,7 @@ MQTT_SENSOR_05_DT_RES="dt/gf/sph01/1/res"
 MQTT_SENSOR_05_CMD_REQ="cmd/sph01/1/req"
 SENSOR_05_DT_REQ_AUTOMATION_ALIAS="S-PH-01-1 Request"
 SENSOR_05_DT_REQ_INTERVAL_SEC=59
+SENSOR_SPH01_1_ADDR=5
 # S-PH-01-1: pH 05
 PH_05_NAME="S-PH-01-1 pH"
 PH_05_HA_ID="S-PH-01-1_PH"
@@ -171,6 +180,7 @@ MQTT_SENSOR_06_DT_RES="dt/gf/sph01/2/res"
 MQTT_SENSOR_06_CMD_REQ="cmd/sph01/2/req"
 SENSOR_06_DT_REQ_AUTOMATION_ALIAS="S-PH-01-2 Request"
 SENSOR_06_DT_REQ_INTERVAL_SEC=59
+SENSOR_SPH01_2_ADDR=6
 # S-PH-01-2: pH 06
 PH_06_NAME="S-PH-01-2 pH"
 PH_06_HA_ID="S-PH-01-2_PH"
@@ -202,6 +212,7 @@ MQTT_SENSOR_10_DT_REQ="dt/gf/sym01/req"
 MQTT_SENSOR_10_DT_RES="dt/gf/sym01/res"
 SENSOR_10_DT_REQ_AUTOMATION_ALIAS="S-YM-01 Request"
 SENSOR_10_DT_REQ_INTERVAL_SEC=49
+SENSOR_SYM01_ADDR=11
 # S-YM-01: Temperature 10
 TEMPERATURE_10_NAME="S-YM-01 Temperature"
 TEMPERATURE_10_HA_ID="S-YM-01_TEMP"
