Updated Topics and addresses after debug and updated edge_computer_main logic

--- a/.env_template
+++ b/.env_template
@@ -1,4 +1,4 @@
-# -------- InfluxDB --------
+# ───── InfluxDB ─────
 DOCKER_INFLUXDB_INIT_MODE="setup"
 DOCKER_INFLUXDB_INIT_ADMIN_TOKEN="lsc8ecdb0f2b4ceea3b375c96bb7777e"
 DOCKER_INFLUXDB_INIT_USERNAME="farm_admin"
@@ -13,42 +13,46 @@ INFLUXDB_BUCKET=FarmData
 INFLUXDB_DOMAIN_1=sensor
 INFLUXDB_DOMAIN_2=binary_sensor
 
-# -------- Home Assistant --------
+# ───── Home Assistant ─────
 TOKEN="your-long-lived-token"
 
-# -------- AppDaemon --------
-#
-
-# -------- MQTT --------
+# ───── MQTT ─────
 MOSQUITTO_BROKER_IP=172.26.31.3
 MOSQUITTO_BROKER_PORT=1883
 ALLOW_ANONYMOUS=true
-PASSWORD_FILE=  # leave empty if unused
 MQTT_EDGE_KEEP_ALIVE=60
 
-# -------- General --------
+# ───── General ─────
 HOST_IP=172.26.31.3
 
-# ───────────── Sensor Data Requests ─────────────
-MQTT_SENSOR_01_DT_REQ=dt/gf/slight01/req
-MQTT_SENSOR_02_DT_REQ=dt/gf/spar02/req
-MQTT_SENSOR_03_DT_REQ=dt/gf/sec01/1/req
-MQTT_SENSOR_04_DT_REQ=dt/gf/sec01/2/req
-MQTT_SENSOR_05_DT_REQ=dt/gf/sph01/1/req
-MQTT_SENSOR_06_DT_REQ=dt/gf/sph01/2/req
-MQTT_SENSOR_10_DT_REQ=dt/gf/sym01/req
-MQTT_SENSOR_11_DT_REQ=dt/gf/co2voc/1/req
-MQTT_SENSOR_12_DT_REQ=dt/gf/co2voc/2/req
-MQTT_SENSOR_13_DT_REQ=dt/gf/sth01/1/req
-MQTT_SENSOR_14_DT_REQ=dt/gf/sth01/2/req
+# ───── Data Request Topics ─────
+MQTT_DT_REQ_EC_GT1=dt/gf/sec01/gt1/req
+MQTT_DT_REQ_EC_GT2=dt/gf/sec01/gt2/req
+MQTT_DT_REQ_EC_MX=dt/gf/sec01/mx/req
 
-# ───────────── Sensor Commands ─────────────
-MQTT_SENSOR_03_CMD_REQ=cmd/sensor03/req
-MQTT_SENSOR_04_CMD_REQ=cmd/sensor04/req
-MQTT_SENSOR_05_CMD_REQ=cmd/sensor05/req
-MQTT_SENSOR_06_CMD_REQ=cmd/sensor06/req
+MQTT_DT_REQ_PH_GT1=dt/gf/sph01/gt1/req
+MQTT_DT_REQ_PH_GT2=dt/gf/sph01/gt2/req
+MQTT_DT_REQ_PH_MX=dt/gf/sph01/mx/req
 
-# ───────────── Relays ─────────────
+MQTT_DT_REQ_PAR_GT1=dt/gf/spar02/gt1/req
+MQTT_DT_REQ_PAR_GT2=dt/gf/spar02/gt2/req
+
+MQTT_DT_REQ_STH_1=dt/gf/sth01/1/req
+MQTT_DT_REQ_STH_2=dt/gf/sth01/2/req
+
+MQTT_DT_REQ_CO2_VOC=dt/gf/co2voc/1/req
+MQTT_DT_REQ_SYM01=dt/gf/sym01/req
+
+# ───── Command Request Topics ─────
+MQTT_CMD_REQ_EC_GT1=cmd/ec_gt1/req
+MQTT_CMD_REQ_EC_GT2=cmd/ec_gt2/req
+MQTT_CMD_REQ_EC_MX=cmd/ec_mx/req
+
+MQTT_CMD_REQ_PH_GT1=cmd/ph_gt1/req
+MQTT_CMD_REQ_PH_GT2=cmd/ph_gt2/req
+MQTT_CMD_REQ_PH_MX=cmd/ph_mx/req
+
+# ───── Relay Topics ─────
 MQTT_RELAY_01_CMD_REQ=cmd/relay01/req
 MQTT_RELAY_02_CMD_REQ=cmd/relay02/req
 MQTT_RELAY_03_CMD_REQ=cmd/relay03/req
@@ -66,16 +70,16 @@ MQTT_RELAY_14_CMD_REQ=cmd/relay14/req
 MQTT_RELAY_15_CMD_REQ=cmd/relay15/req
 MQTT_RELAY_16_CMD_REQ=cmd/relay16/req
 
-# ───────────── SSR ─────────────
+# ───── Solid State Relay ─────
 MQTT_SOLID_STATE_RELAY_01_CMD_REQ=cmd/solid_state_relay01/req
 
-# ───────────── Voltage Control ─────────────
+# ───── Voltage Control ─────
 MQTT_FAN_VOLTAGE_CMD_REQ=cmd/fan_voltage/req
 MQTT_FAN_VOLTAGE_CMD_RES=cmd/fan_voltage/res
 MQTT_VALVE_VOLTAGE_CMD_REQ=cmd/valve_voltage/req
 MQTT_VALVE_VOLTAGE_CMD_RES=cmd/valve_voltage/res
 
-# ───────────── Lamps ─────────────
+# ───── Lamp Control ─────
 LAMP_01_IP=192.168.1.101
 MQTT_LAMP_01_CMD_REQ=cmd/lamp01/req
 MQTT_LAMP_01_DT_REQ=dt/lamp01/req
@@ -84,15 +88,52 @@ LAMP_02_IP=192.168.1.102
 MQTT_LAMP_02_CMD_REQ=cmd/lamp02/req
 MQTT_LAMP_02_DT_REQ=dt/lamp02/req
 
-# ───────────── PID Controllers ─────────────
+# ───── PID Controllers ─────
 MQTT_COOLING_PID_ENABLE_CMD_REQ=cmd/cooling_pid/req
 MQTT_HEATING_PID_ENABLE_CMD_REQ=cmd/heating_pid/req
 MQTT_CO2_PID_ENABLE_CMD_REQ=cmd/co2_pid/req
 
-# ───────────── Desired Values ─────────────
+# ───── Desired Values ─────
 MQTT_REF_HUMID_CMD_REQ=cmd/refhumid/req
 MQTT_REF_HUMID_CMD_RES=cmd/refhumid/res
 MQTT_REF_TEMP_CMD_REQ=cmd/reftemp/req
 MQTT_REF_TEMP_CMD_RES=cmd/reftemp/res
 MQTT_REF_CO2_CMD_REQ=cmd/refco2/req
 MQTT_REF_CO2_CMD_RES=cmd/refco2/res
+
+# ───── Sensor Modbus Channel and Addresses ─────
+SENSOR_EC01_GT1_PORT=/dev/ttySC1
+SENSOR_EC01_GT1_ADDR=5
+
+SENSOR_EC01_GT2_PORT=/dev/ttySC1
+SENSOR_EC01_GT2_ADDR=6
+
+SENSOR_EC01_MX_PORT=/dev/ttySC1
+SENSOR_EC01_MX_ADDR=7
+
+SENSOR_SPH_GT1_PORT=/dev/ttySC1
+SENSOR_SPH_GT1_ADDR=8
+
+SENSOR_SPH_GT2_PORT=/dev/ttySC1
+SENSOR_SPH_GT2_ADDR=9
+
+SENSOR_SPH_MX_PORT=/dev/ttySC1
+SENSOR_SPH_MX_ADDR=10
+
+SENSOR_SYM_PORT=/dev/ttySC1
+SENSOR_SYM_ADDR=12
+
+SENSOR_PAR02_1_PORT=/dev/ttySC1
+SENSOR_PAR02_1_ADDR=1
+
+SENSOR_PAR02_2_PORT=/dev/ttySC1
+SENSOR_PAR02_2_ADDR=34
+
+SENSOR_STH_1_PORT=/dev/ttySC0
+SENSOR_STH_1_ADDR=69
+
+SENSOR_STH_2_PORT=/dev/ttySC0
+SENSOR_STH_2_ADDR=70
+
+SENSOR_VCO2_PORT=/dev/ttySC0
+SENSOR_VCO2_ADDR=7
