--- a/server/homeassistant/config/include/mqtt_sensor_topics.yaml
+++ b/server/homeassistant/config/include/mqtt_sensor_topics.yaml
@@ -14,261 +14,294 @@
 # ───────────────────────────────────────────────────────────────────────────── #
 
 
-# ─────────────────────────────── S-LIGHT-01 ─────────────────────────────── #
-- name: "Light Sensor 01 [Illuminance]"
-  unique_id: "S-LIGHT-01_LIGHT"
-  state_topic: "dt/gf/slight01/res"
-  value_template: "{{ value_json['fields'].illuminance }}"
-  unit_of_measurement: "lx"
-  icon: "mdi:brightness-5"
-
 # ─────────────────────────────── S-PAR-02 ─────────────────────────────── #
-- name: "PAR Sensor 02 [PAR]"
-  unique_id: "S-PAR-02_PAR"
-  state_topic: "dt/gf/spar02/res"
+
+## ───── PAR Sensor GT1 ─────
+- name: "PAR Sensor 02 GT1 [PAR]"
+  unique_id: "S-PAR-02_GT1_PAR"
+  state_topic: "dt/gf/spar02/gt1/res"
   value_template: "{{ value_json['fields'].par }}"
   unit_of_measurement: "µmol/m²/s"
   icon: "mdi:white-balance-sunny"
 
-# ─────────────── S-EC-01-1 ─────────────── #
-- name: "EC Sensor 01-1 [EC]"
-  unique_id: "S-EC-01-1_EC"
-  state_topic: "dt/gf/sec01/1/res"
+## ───── PAR Sensor GT2 ─────
+- name: "PAR Sensor 02 GT2 [PAR]"
+  unique_id: "S-PAR-02_GT2_PAR"
+  state_topic: "dt/gf/spar02/gt2/res"
+  value_template: "{{ value_json['fields'].par }}"
+  unit_of_measurement: "µmol/m²/s"
+  icon: "mdi:white-balance-sunny"
+
+
+# ─────────────────────────────── S-EC-01 ─────────────────────────────── #
+
+## ───── EC Sensor GT1 ─────
+- name: "EC Sensor GT1 [EC]"
+  unique_id: "S-EC-01_GT1_EC"
+  state_topic: "dt/gf/sec01/gt1/res"
   value_template: "{{ value_json['fields'].ec }}"
   unit_of_measurement: "µS/cm"
   icon: "mdi:flash"
 
-- name: "EC Sensor 01-1 [Temperature]"
-  unique_id: "S-EC-01-1_TEMP"
-  state_topic: "dt/gf/sec01/1/res"
+- name: "EC Sensor GT1 [Temperature]"
+  unique_id: "S-EC-01_GT1_TEMP"
+  state_topic: "dt/gf/sec01/gt1/res"
   value_template: "{{ value_json['fields'].temperature }}"
   unit_of_measurement: "°C"
   icon: "mdi:thermometer"
 
-- name: "EC Sensor 01-1 [TDS]"
-  unique_id: "S-EC-01-1_TDS"
-  state_topic: "dt/gf/sec01/1/res"
+- name: "EC Sensor GT1 [TDS]"
+  unique_id: "S-EC-01_GT1_TDS"
+  state_topic: "dt/gf/sec01/gt1/res"
   value_template: "{{ value_json['fields'].tds }}"
   unit_of_measurement: "mg/L"
   icon: "mdi:water"
 
-- name: "EC Sensor 01-1 [Calibration]"
-  unique_id: "S-EC-01-1_CALIBRATION"
-  state_topic: "dt/gf/sec01/1/res"
+- name: "EC Sensor GT1 [Calibration]"
+  unique_id: "S-EC-01_GT1_CALIBRATION"
+  state_topic: "dt/gf/sec01/gt1/res"
   value_template: "{{ (value_json['fields'].calibrated if value_json['fields'].calibrated != 0 else '1970-01-01T00:00:00Z') | as_timestamp | round(0) }}"
   unit_of_measurement: "timestamp"
   icon: "mdi:calendar-clock"
 
-# ─────────────── S-EC-01-2 ─────────────── #
-- name: "EC Sensor 01-2 [EC]"
-  unique_id: "S-EC-01-2_EC"
-  state_topic: "dt/gf/sec01/2/res"
+## ───── EC Sensor GT2 ─────
+- name: "EC Sensor GT2 [EC]"
+  unique_id: "S-EC-01_GT2_EC"
+  state_topic: "dt/gf/sec01/gt2/res"
   value_template: "{{ value_json['fields'].ec }}"
   unit_of_measurement: "µS/cm"
   icon: "mdi:flash"
 
-- name: "EC Sensor 01-2 [Temperature]"
-  unique_id: "S-EC-01-2_TEMP"
-  state_topic: "dt/gf/sec01/2/res"
+- name: "EC Sensor GT2 [Temperature]"
+  unique_id: "S-EC-01_GT2_TEMP"
+  state_topic: "dt/gf/sec01/gt2/res"
   value_template: "{{ value_json['fields'].temperature }}"
   unit_of_measurement: "°C"
   icon: "mdi:thermometer"
 
-- name: "EC Sensor 01-2 [TDS]"
-  unique_id: "S-EC-01-2_TDS"
-  state_topic: "dt/gf/sec01/2/res"
+- name: "EC Sensor GT2 [TDS]"
+  unique_id: "S-EC-01_GT2_TDS"
+  state_topic: "dt/gf/sec01/gt2/res"
   value_template: "{{ value_json['fields'].tds }}"
   unit_of_measurement: "mg/L"
   icon: "mdi:water"
 
-- name: "EC Sensor 01-2 [Calibration]"
-  unique_id: "S-EC-01-2_CALIBRATION"
-  state_topic: "dt/gf/sec01/2/res"
+- name: "EC Sensor GT2 [Calibration]"
+  unique_id: "S-EC-01_GT2_CALIBRATION"
+  state_topic: "dt/gf/sec01/gt2/res"
   value_template: "{{ (value_json['fields'].calibrated if value_json['fields'].calibrated != 0 else '1970-01-01T00:00:00Z') | as_timestamp | round(0) }}"
   unit_of_measurement: "timestamp"
   icon: "mdi:calendar-clock"
 
-# ─────────────── S-PH-01-1 ─────────────── #
-- name: "pH Sensor 01-1 [pH]"
-  unique_id: "S-PH-01-1_PH"
-  state_topic: "dt/gf/sph01/1/res"
-  value_template: "{{ value_json['fields'].ph }}"
-  unit_of_measurement: "pH"
-  icon: "mdi:ph"
+## ───── EC Sensor MX ─────
+- name: "EC Sensor MX [EC]"
+  unique_id: "S-EC-01_MX_EC"
+  state_topic: "dt/gf/sec01/mx/res"
+  value_template: "{{ value_json['fields'].ec }}"
+  unit_of_measurement: "µS/cm"
+  icon: "mdi:flash"
 
-- name: "pH Sensor 01-1 [Temperature]"
-  unique_id: "S-PH-01-1_TEMP"
-  state_topic: "dt/gf/sph01/1/res"
+- name: "EC Sensor MX [Temperature]"
+  unique_id: "S-EC-01_MX_TEMP"
+  state_topic: "dt/gf/sec01/mx/res"
   value_template: "{{ value_json['fields'].temperature }}"
   unit_of_measurement: "°C"
   icon: "mdi:thermometer"
 
-- name: "pH Sensor 01-1 [Calibration]"
-  unique_id: "S-PH-01-1_CALIBRATION"
-  state_topic: "dt/gf/sph01/1/res"
+- name: "EC Sensor MX [TDS]"
+  unique_id: "S-EC-01_MX_TDS"
+  state_topic: "dt/gf/sec01/mx/res"
+  value_template: "{{ value_json['fields'].tds }}"
+  unit_of_measurement: "mg/L"
+  icon: "mdi:water"
+
+- name: "EC Sensor MX [Calibration]"
+  unique_id: "S-EC-01_MX_CALIBRATION"
+  state_topic: "dt/gf/sec01/mx/res"
   value_template: "{{ (value_json['fields'].calibrated if value_json['fields'].calibrated != 0 else '1970-01-01T00:00:00Z') | as_timestamp | round(0) }}"
   unit_of_measurement: "timestamp"
   icon: "mdi:calendar-clock"
 
-# ─────────────── S-PH-01-2 ─────────────── #
-- name: "pH Sensor 01-2 [pH]"
-  unique_id: "S-PH-01-2_PH"
-  state_topic: "dt/gf/sph01/2/res"
+
+# ─────────────────────────────── S-PH-01 ─────────────────────────────── #
+
+## ───── pH Sensor GT1 ─────
+- name: "pH Sensor GT1 [pH]"
+  unique_id: "S-PH-01_GT1_PH"
+  state_topic: "dt/gf/sph01/gt1/res"
   value_template: "{{ value_json['fields'].ph }}"
   unit_of_measurement: "pH"
   icon: "mdi:ph"
 
-- name: "pH Sensor 01-2 [Temperature]"
-  unique_id: "S-PH-01-2_TEMP"
-  state_topic: "dt/gf/sph01/2/res"
+- name: "pH Sensor GT1 [Temperature]"
+  unique_id: "S-PH-01_GT1_TEMP"
+  state_topic: "dt/gf/sph01/gt1/res"
   value_template: "{{ value_json['fields'].temperature }}"
   unit_of_measurement: "°C"
   icon: "mdi:thermometer"
 
-- name: "pH Sensor 01-2 [Calibration]"
-  unique_id: "S-PH-01-2_CALIBRATION"
-  state_topic: "dt/gf/sph01/2/res"
+- name: "pH Sensor GT1 [Calibration]"
+  unique_id: "S-PH-01_GT1_CALIBRATION"
+  state_topic: "dt/gf/sph01/gt1/res"
+  value_template: "{{ (value_json['fields'].calibrated if value_json['fields'].calibrated != 0 else '1970-01-01T00:00:00Z') | as_timestamp | round(0) }}"
+  unit_of_measurement: "timestamp"
+  icon: "mdi:calendar-clock"
+
+## ───── pH Sensor GT2 ─────
+- name: "pH Sensor GT2 [pH]"
+  unique_id: "S-PH-01_GT2_PH"
+  state_topic: "dt/gf/sph01/gt2/res"
+  value_template: "{{ value_json['fields'].ph }}"
+  unit_of_measurement: "pH"
+  icon: "mdi:ph"
+
+- name: "pH Sensor GT2 [Temperature]"
+  unique_id: "S-PH-01_GT2_TEMP"
+  state_topic: "dt/gf/sph01/gt2/res"
+  value_template: "{{ value_json['fields'].temperature }}"
+  unit_of_measurement: "°C"
+  icon: "mdi:thermometer"
+
+- name: "pH Sensor GT2 [Calibration]"
+  unique_id: "S-PH-01_GT2_CALIBRATION"
+  state_topic: "dt/gf/sph01/gt2/res"
+  value_template: "{{ (value_json['fields'].calibrated if value_json['fields'].calibrated != 0 else '1970-01-01T00:00:00Z') | as_timestamp | round(0) }}"
+  unit_of_measurement: "timestamp"
+  icon: "mdi:calendar-clock"
+
+## ───── pH Sensor MX ─────
+- name: "pH Sensor MX [pH]"
+  unique_id: "S-PH-01_MX_PH"
+  state_topic: "dt/gf/sph01/mx/res"
+  value_template: "{{ value_json['fields'].ph }}"
+  unit_of_measurement: "pH"
+  icon: "mdi:ph"
+
+- name: "pH Sensor MX [Temperature]"
+  unique_id: "S-PH-01_MX_TEMP"
+  state_topic: "dt/gf/sph01/mx/res"
+  value_template: "{{ value_json['fields'].temperature }}"
+  unit_of_measurement: "°C"
+  icon: "mdi:thermometer"
+
+- name: "pH Sensor MX [Calibration]"
+  unique_id: "S-PH-01_MX_CALIBRATION"
+  state_topic: "dt/gf/sph01/mx/res"
   value_template: "{{ (value_json['fields'].calibrated if value_json['fields'].calibrated != 0 else '1970-01-01T00:00:00Z') | as_timestamp | round(0) }}"
   unit_of_measurement: "timestamp"
   icon: "mdi:calendar-clock"
 
 
+# ─────────────────────────────── CO2/VOC Sensor ─────────────────────────────── #
 
-# ─────────────── CO2_VOC_1 ─────────────── #
-- name: "CO2/VOC Sensor 01 [Temperature]"
+## ───── CO2/VOC Sensor ─────
+- name: "CO2/VOC Sensor [Temperature]"
   unique_id: "CO2_VOC_1_TEMP"
-  state_topic: "dt/gf/CO2VOC/1/res"
+  state_topic: "dt/gf/co2voc/1/res"
   value_template: "{{ value_json['fields'].temperature }}"
   unit_of_measurement: "°C"
   icon: "mdi:thermometer"
 
-- name: "CO2/VOC Sensor 01 [Humidity]"
+- name: "CO2/VOC Sensor [Humidity]"
   unique_id: "CO2_VOC_1_RH"
-  state_topic: "dt/gf/CO2VOC/1/res"
+  state_topic: "dt/gf/co2voc/1/res"
   value_template: "{{ value_json['fields'].humidity }}"
   unit_of_measurement: "%[RH]"
   icon: "mdi:water-percent"
 
-- name: "CO2/VOC Sensor 01 [CO2]"
+- name: "CO2/VOC Sensor 1 [CO2]"
   unique_id: "CO2_VOC_1_CO2"
-  state_topic: "dt/gf/CO2VOC/1/res"
+  state_topic: "dt/gf/co2voc/1/res"
   value_template: "{{ value_json['fields'].co2 }}"
   unit_of_measurement: "ppm"
   icon: "mdi:molecule-co2"
 
-- name: "CO2/VOC Sensor 01 [Dewpoint]"
+- name: "CO2/VOC Sensor 1 [Dewpoint]"
   unique_id: "CO2_VOC_1_DP"
-  state_topic: "dt/gf/CO2VOC/1/res"
+  state_topic: "dt/gf/co2voc/1/res"
   value_template: "{{ value_json['fields'].dewpoint }}"
   unit_of_measurement: "°C"
   icon: "mdi:thermometer-water"
 
-- name: "CO2/VOC Sensor 01 [Volume Flow]"
+- name: "CO2/VOC Sensor 1 [Volume Flow]"
   unique_id: "CO2_VOC_1_VF"
-  state_topic: "dt/gf/CO2VOC/1/res"
+  state_topic: "dt/gf/co2voc/1/res"
   value_template: "{{ value_json['fields'].volumeFlow }}"
   unit_of_measurement: "m3/s"
   icon: "mdi:air-filter"
 
-# ─────────────── CO2_VOC_2 ─────────────── #
-- name: "CO2/VOC Sensor 02 [Temperature]"
-  unique_id: "CO2_VOC_2_TEMP"
-  state_topic: "dt/gf/CO2VOC/2/res"
-  value_template: "{{ value_json['fields'].temperature }}"
-  unit_of_measurement: "°C"
-  icon: "mdi:thermometer"
 
-- name: "CO2/VOC Sensor 02 [Humidity]"
-  unique_id: "CO2_VOC_2_RH"
-  state_topic: "dt/gf/CO2VOC/2/res"
-  value_template: "{{ value_json['fields'].humidity }}"
-  unit_of_measurement: "%[RH]"
-  icon: "mdi:water-percent"
+# ─────────────────────────────── S-TH-01 ─────────────────────────────── #
 
-- name: "CO2/VOC Sensor 02 [CO2]"
-  unique_id: "CO2_VOC_2_CO2"
-  state_topic: "dt/gf/CO2VOC/2/res"
-  value_template: "{{ value_json['fields'].co2 }}"
-  unit_of_measurement: "ppm"
-  icon: "mdi:molecule-co2"
-
-- name: "CO2/VOC Sensor 02 [Dewpoint]"
-  unique_id: "CO2_VOC_2_DP"
-  state_topic: "dt/gf/CO2VOC/2/res"
-  value_template: "{{ value_json['fields'].dewpoint }}"
-  unit_of_measurement: "°C"
-  icon: "mdi:thermometer-water"
-
-- name: "CO2/VOC Sensor 02 [Volume Flow]"
-  unique_id: "CO2_VOC_2_VF"
-  state_topic: "dt/gf/CO2VOC/2/res"
-  value_template: "{{ value_json['fields'].volumeFlow }}"
-  unit_of_measurement: "m3/s"
-  icon: "mdi:air-filter"
-
-# ─────────────── STH01_1 ─────────────── #
-- name: "STH Sensor 01 [Temperature]"
+## ───── STH Sensor 1 ─────
+- name: "STH Sensor 1 [Temperature]"
   unique_id: "STH01_1_TEMP"
-  state_topic: "dt/gf/STH01/1/res"
+  state_topic: "dt/gf/sth01/1/res"
   value_template: "{{ value_json['fields'].temperature }}"
   unit_of_measurement: "°C"
   icon: "mdi:thermometer"
 
-- name: "STH Sensor 01 [Humidity]"
+- name: "STH Sensor 1 [Humidity]"
   unique_id: "STH01_1_RH"
-  state_topic: "dt/gf/STH01/1/res"
+  state_topic: "dt/gf/sth01/1/res"
   value_template: "{{ value_json['fields'].humidity }}"
   unit_of_measurement: "%[RH]"
   icon: "mdi:water-percent"
 
-- name: "STH Sensor 01 [Dewpoint]"
+- name: "STH Sensor 1 [Dewpoint]"
   unique_id: "STH01_1_DP"
-  state_topic: "dt/gf/STH01/1/res"
+  state_topic: "dt/gf/sth01/1/res"
   value_template: "{{ value_json['fields'].dewpoint }}"
   unit_of_measurement: "°C"
   icon: "mdi:thermometer-water"
 
-# ─────────────── STH01_2 ─────────────── #
-- name: "STH Sensor 02 [Temperature]"
+## ───── STH Sensor 2 ─────
+- name: "STH Sensor 2 [Temperature]"
   unique_id: "STH01_2_TEMP"
-  state_topic: "dt/gf/STH01/2/res"
+  state_topic: "dt/gf/sth01/2/res"
   value_template: "{{ value_json['fields'].temperature }}"
   unit_of_measurement: "°C"
   icon: "mdi:thermometer"
 
-- name: "STH Sensor 02 [Humidity]"
+- name: "STH Sensor 2 [Humidity]"
   unique_id: "STH01_2_RH"
-  state_topic: "dt/gf/STH01/2/res"
+  state_topic: "dt/gf/sth01/2/res"
   value_template: "{{ value_json['fields'].humidity }}"
   unit_of_measurement: "%[RH]"
   icon: "mdi:water-percent"
 
-- name: "STH Sensor 02 [Dewpoint]"
+- name: "STH Sensor 2 [Dewpoint]"
   unique_id: "STH01_2_DP"
-  state_topic: "dt/gf/STH01/2/res"
+  state_topic: "dt/gf/sth01/2/res"
   value_template: "{{ value_json['fields'].dewpoint }}"
   unit_of_measurement: "°C"
   icon: "mdi:thermometer-water"
 
-# ─────────────── Dummy Control Signal ─────────────── #
-- name: "Dummy Temperature Control Signal [Float]"
-  unique_id: "GF_P_10"
-  state_topic: "ha/desktop_gf/actuators/temperature"
-  value_template: "{{ (value_json['control_signal'] | float) | round(2) }}"
-  unit_of_measurement: "[float]"
-  icon: "mdi:heat-wave"
 
-# ─────────────── S-YM-01 ─────────────── #
-- name: "S-YM-01 [Temperature]"
+
+# ─────────────────────────────── S-YM-01 ─────────────────────────────── #
+
+## ───── SYM01 Leaf Wetness Sensor ─────
+- name: "SYM01 [Temperature]"
   unique_id: "S-YM-01_TEMP"
   state_topic: "dt/gf/sym01/res"
   value_template: "{{ value_json['fields'].temperature }}"
   unit_of_measurement: "°C"
   icon: "mdi:thermometer"
 
-- name: "S-YM-01 [Leaf Wetness]"
+- name: "SYM01 [Leaf Wetness]"
   unique_id: "S-YM-01_LEAF_WETNESS"
   state_topic: "dt/gf/sym01/res"
   value_template: "{{ value_json['fields'].wetness }}"
   unit_of_measurement: "%[Leaf Wetness]"
   icon: "mdi:leaf"
+
+
+# ─────────────────────────────── Dummy Control Signal ─────────────────────────────── #
+
+- name: "Dummy Temperature Control Signal [Float]"
+  unique_id: "GF_P_10"
+  state_topic: "ha/desktop_gf/actuators/temperature"
+  value_template: "{{ (value_json['control_signal'] | float) | round(2) }}"
+  unit_of_measurement: "[float]"
+  icon: "mdi:heat-wave"
